--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,27 +2,13 @@
 {% load crispy_forms_tags %}
 {% load staticfiles %}
 
- {% block head_title%}Home{% endblock%}
+{% block head_title%}Home{% endblock%}
 
+{% block head_css %}{% endblock %}
 
-<style>
-{% block css %}
-.jumbotron {
-    /*position: relative;*/
-    background-color: white;
-    /*background-image: url("{% static 'img/banner.png' %}");*/
-    /*color: white;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*background-size: cover;*/
-    /*overflow: hidden;*/
+{% block content_first %}{% endblock %}
 
-    /*background: #22f url("{% static 'img/banner.jpg' %}") center center;*/
-}
-{% endblock %}
-</style>
-
-  {% block jumbotron %}
+{% block jumbotron %}
   <div class="jumbotron">
     <div class="container-fluid">
       <img class = "img-responsive banner1" src ="{% static 'img/banner.png' %}" alt="Timberline's Digital Hackerspace Landing Page" />
@@ -36,9 +22,10 @@
   </div>
 {% endblock %}
 
-
-
-
 {% block content_outer %}
-
+  {% block content %}{% endblock %}
 {% endblock %}
+
+{% block content_last %}{% endblock %}
+
+{% block js %}{% endblock %}
