--- a/src/announcements/templates/announcements/base.html
+++ b/src/announcements/templates/announcements/base.html
@@ -3,6 +3,4 @@
 {% block head_title %}Announcements | {% endblock %}
 
 {% block heading %}{% block heading_inner %}{% endblock%}<i class="fa fa-newspaper-o pull-right"></i>{% endblock %}
-{% block content %}
-
-{% endblock %}
+{% block content %}{% endblock %}
