--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -2,9 +2,15 @@
 {% load crispy_forms_tags %}
 {% load staticfiles %}
 
-{% block head_title%}{% if title %}{{ title }}{% endif %}{% endblock%}
+{% block head_title%}{% if title %}{{ title }} | {% endif %}{% endblock%}
 
-{% if heading %}{% block heading %}{{ heading }} <i class="fa fa-shield pull-right"></i>{% endblock %}{% endif %}
+{% block heading %}{{ heading }}
+{% if request.user.is_authenticated and request.user.is_staff %}
+  <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button">New</a>
+{% endif %}
+
+ <i class="fa fa-shield pull-right"></i>
+ {% endblock %}
 
 {% block content %}
 
