--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -17,7 +17,7 @@
     <!-- http://bootstrap-table.wenzhixin.net.cn/getting-started/ -->
       <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.js"></script>
       <!-- Latest compiled and minified Locales -->
-      <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/locale/bootstrap-table-zh-CN.min.js"></script>
+      <!--<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/locale/bootstrap-table-zh-CN.min.js"></script>-->
 
     <!-- Custom js -->
 
@@ -57,13 +57,6 @@
             $('.collapsed').removeClass('active');
             $(this).toggleClass('active');
          });
-
-        /* switch active elements when selected */
-        // $('.list-group-item').on('click',function(e){
-        //   var previous = $(this).closest(".list-group").children(".active");
-        //   previous.removeClass('active'); // previous list-item
-        //   $(e.target).addClass('active'); // activated list-item
-        // });
       });
 
     </script>
