--- a/src/static_in_project/our_static/css/custom.css
+++ b/src/static_in_project/our_static/css/custom.css
@@ -17,9 +17,12 @@
   /*background-image: linear-gradient(to bottom, #D9534F 0px, #D43F3A 100%);*/
 }
 
+.panel-default > .panel-heading {
+  background-color: #FFF;
+}
 
 .panel-default > .panel-heading.accordian-trigger:hover {
-  background-color: #FFF;
+  background-color: #F5F5F5;
 }
 
 .panel-default > .panel-heading.accordian-trigger.active {
