--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -27,7 +27,7 @@
         <div class="pull-right">
           <a class="btn btn-danger" href="{% url 'announcements:delete' object.id %}" role="button">Delete</a>
           <a class="btn btn-info" href="{% url 'announcements:update' object.id %}" role="button">Edit</a>
-          <a class="btn btn-primary" href="" role="button">Copy</a>
+          <a class="btn btn-primary" href="{% url 'announcements:copy' object.id %}" role="button">Copy</a>
         </div>
         {% endif %}
       </div>
