--- a/src/profile_manager/templates/profile_manager/form.html
+++ b/src/profile_manager/templates/profile_manager/form.html
@@ -7,6 +7,6 @@
 {% block content %}
 <form action="" method="post">{% csrf_token %}
   {{ form|crispy }}
-  <input type="submit" value="Create Profile" />
+  <input class= "btn" type="submit" value="Create Profile" />
 </form>
 {% endblock %}
