--- a/src/profile_manager/templates/profile_manager/profile_update_form.html
+++ b/src/profile_manager/templates/profile_manager/profile_update_form.html
@@ -9,6 +9,6 @@
 {% block content %}
 <form action="" method="post">{% csrf_token %}
   {{ form|crispy }}
-  <input type="submit" value="Update" />
+  <input class="btn" type="submit" value="Update" />
 </form>
 {% endblock %}
