add comments app

--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -9,7 +9,9 @@
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 {% for object in object_list %}
   <div class="panel panel-default">
-    <div class="panel-heading accordian-trigger" role="tab" id="heading{{object.id}}" data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
+    <div class="panel-heading accordian-trigger" role="tab" id="heading{{object.id}}"
+      aria-expanded="false" aria-controls="collapse{{object.id}}"
+      data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
       <h4 class="panel-title">
         <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{object.id}}" aria-expanded="true" aria-controls="collapse{{object.id}}"> -->
           {{object.title}}
