--- a/src/quest_manager/templates/quest_manager/quests_available_tab.html
+++ b/src/quest_manager/templates/quest_manager/quests_available_tab.html
@@ -10,7 +10,8 @@
           >
      <thead>
        <tr>
-          <th> </th>
+          <th> </th>cd src
+
           <th data-sortable="true">Quest</th>
           <th data-halign="center" data-align="center" data-sortable="true">XP</th>
           <th data-halign="center" data-align="center" data-sortable="true" data-formatter="%s min">Est. Time</th>
