--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,11 +21,32 @@
 
   <body>
 
+
     {% block content_first %}{% endblock %}
     {% include 'navbar-fixed.html' %}
 
     {% block jumbotron %}{% endblock %}
     <div class="container-fluid">
+      {% if messages %}
+        {% for message in messages %}
+        <div role="alert" class="alert alert-dismissible
+          {% if 'error' in message.tags %}alert-danger
+          {% elif 'warning' in message.tags %}alert-warning
+          {% elif 'info' in message.tags %}alert-info
+          {% elif 'success' in message.tags %}alert-success
+          {% endif %}">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          {% if 'safe' in message.tags %}
+            {{ message|safe }}
+          {% else %}
+            {{ message|safe }}
+          {% endif %}
+        </div>
+        {% endfor %}
+      {% endif %}
+
       {% block content_outer %}{% endblock %}
     </div> <!-- /container -->
 
