--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -10,15 +10,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-home"></i>
-</a>
+      <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-home"></i></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
+
+
+
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="{% url 'home' %}">Home</a></li> -->
         <!-- <li><a href="{% url 'home' %}">Announcements <span class="badge">23</span></a></li>
         <li><a class="active" href="{% url 'quests:quests' %}">Quests</a></li>
         <li><a href="{% url 'home' %}">Achievements</a></li> -->
+
+        <!-- XP Bar -->
+
 
         {% if request.user.is_authenticated and request.user.is_staff %}
         <li class="dropdown">
@@ -38,8 +43,26 @@
           </ul>
         </li>
         {% endif %}
-
+        <!-- <li>
+          <div class="nav navbar-text progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="1000" style="width: 60%;">
+              <span class="sr-only">60% Complete</span>
+            </div>
+          </div>
+        </li> -->
       </ul>
+
+
+      <!-- <div class="nav navbar-text progress">
+
+        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="1000" style="width: 60%;">
+          <span class="sr-only">60% Complete</span>
+        </div>
+      </div> -->
+      <!-- <div class="nav navbar-text progress" style="width: 100%; margin-top:10px">
+          <div class="bar" style="width: 30%;"></div>
+      </div> -->
+
       <ul class="nav navbar-nav navbar-right">
 
         {% if request.user.is_authenticated %}
