--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,6 +15,7 @@
     <title>{% block head_title%}{% endblock%} Timberline's Digital Hackerspace</title>
 
     {% include 'head_css.html' %}
+    {% block head %}{% endblock %}
 
     <style>{% block head_css %}{% endblock %}</style>
   </head>
