--- a/src/templates/base_no_sidebar.html
+++ b/src/templates/base_no_sidebar.html
@@ -3,6 +3,7 @@
 {% load staticfiles %}
 
 {% block head_title%}{% endblock%}
+{% block head %}{% endblock %}
 {% block head_css %}{% endblock %}
 
 {% block content_first %}{% endblock %}
