--- a/src/templates/base_sidebar.html
+++ b/src/templates/base_sidebar.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_title%}{% endblock%}
+{% block head %}{% endblock %}
 {% block head_css %}{% endblock %}
 
 {% block content_first %}{% endblock %}
