--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -15,6 +15,8 @@
   <!-- Bootstrap Tables! Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.css">
 
+  <!-- Bootstrap DateTimePicker Widget -->
+  <link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
 
 <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
 <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
