--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -19,6 +19,7 @@
       <!-- Latest compiled and minified Locales -->
       <!--<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/locale/bootstrap-table-zh-CN.min.js"></script>-->
 
+
     <!-- Custom js -->
 
     <!-- format text inputs that have datePicker class to have a datepicker -->
@@ -26,22 +27,22 @@
       $(document).ready(function() {
 
         //Formatting datePicker inputs
-        $('.datePicker')
-            //this rwap
-            .wrap("<div class='input-group'>")
-            .datepicker({
-              showButtonPanel: true,
-              showOn: "both",
-              changeMonth: true,
-              changeYear: true,
-            });
-
-        $('.ui-datepicker-trigger')
-          // http://getbootstrap.com/components/#input-groups-buttons
-          //.empty().append("<i class='fa fa-calendar'></i>") //font-awesome icons looks nicer
-          .empty().append('<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>')
-          .addClass("btn btn-default")
-          .wrap("<span class='input-group-btn'></span");
+        // $('.datePicker')
+        //     //this rwap
+        //     .wrap("<div class='input-group'>")
+        //     .datepicker({
+        //       showButtonPanel: true,
+        //       showOn: "both",
+        //       changeMonth: true,
+        //       changeYear: true,
+        //     });
+        //
+        // $('.ui-datepicker-trigger')
+        //   // http://getbootstrap.com/components/#input-groups-buttons
+        //   //.empty().append("<i class='fa fa-calendar'></i>") //font-awesome icons looks nicer
+        //   .empty().append('<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>')
+        //   .addClass("btn btn-default")
+        //   .wrap("<span class='input-group-btn'></span");
 
         /* off-canvas sidebar toggle */
         $('[data-toggle=offcanvas]').click(function() {
