django-datetimewidget working in quest form

--- a/src/announcements/templates/announcements/form.html
+++ b/src/announcements/templates/announcements/form.html
@@ -1,6 +1,13 @@
 {% extends "announcements/base.html" %}
 {% load crispy_forms_tags %}
 
+{% block head %}
+  <!-- need these loaded first for date-time picker widgets to work I think -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
+  {{ form.media }}
+{% endblock %}
+
 {% block heading_inner %} {{ heading }}{% endblock %}
 
 {% block content %}
