--- a/src/quest_manager/templates/quest_manager/quest_form.html
+++ b/src/quest_manager/templates/quest_manager/quest_form.html
@@ -3,6 +3,12 @@
 {% load staticfiles %}
 
 {% block head_title%}{% if title %}{{ title }} | {% endif %}{% endblock%}
+{% block head %}
+  <!-- need these loaded first for date-time picker widgets to work I think -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
+  {{ form.media }}
+{% endblock %}
 
 {% if heading %}{% block heading %}{{ heading|safe }} <i class="fa fa-shield pull-right"></i>{% endblock %}{% endif %}
 
