--- a/src/announcements/templates/announcements/base.html
+++ b/src/announcements/templates/announcements/base.html
@@ -3,14 +3,7 @@
 
 {% block head_title %}Announcements | {% endblock %}
 
-{% block head %}
-
-  <!-- need these loaded first for date-time picker widgets to work I think -->
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
-{{ form.media }}
-{% endblock %}
+{% block head %}{% endblock %}
 
 {% block content_first %}{% endblock %}
 
