--- a/src/announcements/templates/announcements/form.html
+++ b/src/announcements/templates/announcements/form.html
@@ -1,5 +1,6 @@
 {% extends "announcements/base.html" %}
 {% load crispy_forms_tags %}
+{% load staticfiles %}
 
 {% block head %}
   <!-- need these loaded first for date-time picker widgets to work I think -->
