--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,6 +28,9 @@
 
     {% block jumbotron %}{% endblock %}
     <div class="container-fluid">
+
+      <div id='notificationsLoader'></div>
+
       {% if messages %}
         {% for message in messages %}
         <div role="alert" class="alert alert-dismissible fade in
