notifications menu drop-list

--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -36,13 +36,22 @@
               csrfmiddlewaretoken: "{{ csrf_token }}",
             },
             success: function(data){
-              $("#notificationsLoader").html('<h3>Notifications</h3>');
+              $("#notification_dropdown").html("");
               var count = data.count;
               console.log(count);
-              $(data.notifications).each(function(){
-                $("#notificationsLoader").append(this + "<br />")
-              })
-              console.log(data.notifications);
+              if(count!=0) {
+                // $("#notification_badge").html(count);
+                $("#notification_dropdown").append("<li class='dropdown-header'>New Notifications</li>")
+                $(data.notifications).each(function(){
+                  var link = this;
+                  $("#notification_dropdown").append("<li>"+link + "</li>")
+                })
+                console.log(data.notifications);
+                $("#notification_dropdown").append("<li role='separator' class='divider'></li>")
+              }
+
+              var url = "{% url 'notifications:list' %}"
+              $("#notification_dropdown").append("<li><a href='"+url+"'>View All Notifications</a></li>")
 
             },
             error: function(rs, e) {
