static files working local..ish

--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -6,12 +6,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <!-- js via static files -->
-      <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
+      <script src="{% static 'js/bootstrap.min.js' %}"></script>
       <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
       <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 
     <!-- js via CDN -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+      <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
 
     <!-- Bootstrap Tables: Latest compiled and minified JavaScript -->
     <!-- http://bootstrap-table.wenzhixin.net.cn/getting-started/ -->
