--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -2,15 +2,15 @@
 
 <!-- CSS via static -->
   <!-- Bootstrap core CSS -->
-  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+  <!--<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">-->
   <!-- Custom styles for this template -->
-  <link href="{% static 'css/navbar-fixed-top.css' %}" rel="stylesheet">
+<link href="{% static 'css/navbar-fixed-top.css' %}" rel="stylesheet">
 
 <!-- CSS via CDN -->
   <!-- Bootstrap core CSS -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- Custom styles for this template -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
   <!-- Bootstrap Tables! Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.css">
@@ -37,4 +37,4 @@
 
 
 <!-- Custom CSS -->
-  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+<link href="{% static 'css/custom.css' %}" rel="stylesheet">
