--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -26,7 +26,7 @@
     <script>
       $(document).ready(function() {
 
-        // notifications data
+        // notifications dropdown
         $(".notification-toggle").click(function(e){
           e.preventDefault();
           $.ajax({
